Allow execution of bash script by setting the execute permission bit

--- a/IoTBox/Dockerfile
+++ b/IoTBox/Dockerfile
@@ -16,6 +16,7 @@ RUN mkdir /etc/qemu
 RUN echo "allow br0" >> /etc/qemu/bridge.conf
 
 COPY setup.sh /setup.sh
+RUN chmod +x /setup.sh
 
 # https://wiki.debian.org/KVM
 # https://jamielinux.com/docs/libvirt-networking-handbook/
